# palette-transfer

./: .env.example  .gitignore  .railwayignore  CLAUDE.md  Dockerfile  README.md  app.py  main.py  nixpacks.toml  packagelist.txt  pyproject.toml  railway.toml  requirements.txt  todo.org
.claude/: settings.local.json
.claude/commands/: analyze.md  find.md  patterns.md  research.md
algorithms/: __init__.py  entire_palette.py  helpers.py  kmeans_palette.py  palette-transfer.py  reinhard_lab_transfer.py  reinhard_transfer.py  skintone_transfer.py  skintone_transfer_pil.py  targeted_transfer.py
app/: __init__.py  config.py  extensions.py
app/domain/: __init__.py  exceptions.py  transfer.py  user.py
app/infrastructure/: __init__.py  auth.py
app/infrastructure/database/: __init__.py  models.py  repositories.py
app/infrastructure/storage/: __init__.py  local.py
app/interfaces/: __init__.py
app/services/: __init__.py  ports.py  transfer_service.py  user_service.py
canva-app/: .gitignore  package-lock.json  package.json  todo.org
chatgpt_server/: main.py  requirements.txt
migrations/versions/: 8f4b1c7c86fc_add_oauth_fields_to_users_table.py  add_survey_tables.py
palette-transfer/: helpers.py  palette-transfer.py
reference/: palette_paper_markdown.md  paper2_markdown.md
tests/: __init__.py  test_api.py  test_helpers.py  test_kmeans_palette.py  test_reinhard_transfer.py  test_structure.py  test_targeted_transfer.py
tests/integration/: __init__.py  test_api.py  test_oauth.py
tests/unit/: __init__.py  test_domain.py  test_services.py
(+23 files in other folders)
